; ModuleID = '/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_turn_sigterm_on.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_turn_sigterm_on.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sigterm_on = common dso_local global i32 0, align 4
@precise_now = common dso_local global i64 0, align 8
@SIGTERM_MAX_TIMEOUT = common dso_local global i64 0, align 8
@sigterm_time = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @turn_sigterm_on to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @turn_sigterm_on() #0 {
  %1 = load i32, i32* @sigterm_on, align 4
  %2 = icmp ne i32 %1, 1
  br i1 %2, label %3, label %7

3:                                                ; preds = %0
  %4 = load i64, i64* @precise_now, align 8
  %5 = load i64, i64* @SIGTERM_MAX_TIMEOUT, align 8
  %6 = add nsw i64 %4, %5
  store i64 %6, i64* @sigterm_time, align 8
  store i32 1, i32* @sigterm_on, align 4
  br label %7

7:                                                ; preds = %3, %0
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
